--- a/style.css
+++ b/style.css
@@ -1,13 +1,41 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #505050;
+}
+
 table, td, th {  
     border: 1px solid #ddd;
     text-align: left;
 }
-  
+
+thead {
+    font-weight: bolder;
+}
 table {
     border-collapse: collapse;
     width: 100%;
+    margin: 6px;
+    padding-top: 1%;
+}
+
+#emp-header {
 }
   
 th, td {
     padding: 15px;
+}
+
+.employee-inputs {
+    border: 1px solid black;
+    padding: 5px;
+}
+
+header {
+    background-color: lightgrey;
+    padding: 5px;
+}
+
+#submit-button-spacer {
+    margin: 1%;
+    padding: 1px;
 }
