Created delete button that removes a row, started work on updating total monthly cost

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header {
     padding: 5px;
 }
 
+.delete-header {
+    min-width: 100px;
+}
+
 #submit-button-spacer {
     margin: 1%;
     padding: 1px;
