--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ th, td {
 
 header {
     text-align: center;
-    background-color: lightgrey;
+    background-color: rgb(178, 219, 170);
     padding: 5px;
 }
 
